<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/faint_yellow"
    android:orientation="vertical"
    android:padding="16dp">

    <Switch
        android:id="@+id/switchDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/faint_yellow"
        android:text="@string/setting_dark_mode"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/faint_yellow"
        android:text="@string/setting_export"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnImport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/faint_yellow"
        android:text="@string/setting_import"
        android:textColor="@color/black" />
</LinearLayout>